"""
yaml-cpp is a YAML parser and emitter in c++ matching the YAML specification.
"""

module(
    name = "yaml-cpp",
    compatibility_level = 1,
    version = "0.8.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
