AUTOMAKE_OPTIONS=foreign
#ACLOCAL_AMFLAGS=-Im4

nobase_include_HEADERS=yaml-cpp/exceptions.h
nobase_include_HEADERS+=yaml-cpp/mark.h
nobase_include_HEADERS+=yaml-cpp/node/impl.h
nobase_include_HEADERS+=yaml-cpp/node/emit.h
nobase_include_HEADERS+=yaml-cpp/node/ptr.h
nobase_include_HEADERS+=yaml-cpp/node/node.h
nobase_include_HEADERS+=yaml-cpp/node/parse.h
nobase_include_HEADERS+=yaml-cpp/node/type.h
nobase_include_HEADERS+=yaml-cpp/node/detail/node_ref.h
nobase_include_HEADERS+=yaml-cpp/node/detail/node_iterator.h
nobase_include_HEADERS+=yaml-cpp/node/detail/impl.h
nobase_include_HEADERS+=yaml-cpp/node/detail/node.h
nobase_include_HEADERS+=yaml-cpp/node/detail/memory.h
nobase_include_HEADERS+=yaml-cpp/node/detail/iterator_fwd.h
nobase_include_HEADERS+=yaml-cpp/node/detail/bool_type.h
nobase_include_HEADERS+=yaml-cpp/node/detail/node_data.h
nobase_include_HEADERS+=yaml-cpp/node/detail/iterator.h
nobase_include_HEADERS+=yaml-cpp/node/convert.h
nobase_include_HEADERS+=yaml-cpp/node/iterator.h
nobase_include_HEADERS+=yaml-cpp/binary.h
nobase_include_HEADERS+=yaml-cpp/anchor.h
nobase_include_HEADERS+=yaml-cpp/yaml.h
nobase_include_HEADERS+=yaml-cpp/emittermanip.h
nobase_include_HEADERS+=yaml-cpp/dll.h
nobase_include_HEADERS+=yaml-cpp/noncopyable.h
nobase_include_HEADERS+=yaml-cpp/emitter.h
nobase_include_HEADERS+=yaml-cpp/contrib/anchordict.h
nobase_include_HEADERS+=yaml-cpp/contrib/graphbuilder.h
nobase_include_HEADERS+=yaml-cpp/eventhandler.h
nobase_include_HEADERS+=yaml-cpp/null.h
nobase_include_HEADERS+=yaml-cpp/emitfromevents.h
nobase_include_HEADERS+=yaml-cpp/traits.h
nobase_include_HEADERS+=yaml-cpp/parser.h
nobase_include_HEADERS+=yaml-cpp/ostream_wrapper.h
nobase_include_HEADERS+=yaml-cpp/stlemitter.h
nobase_include_HEADERS+=yaml-cpp/emitterstyle.h
nobase_include_HEADERS+=yaml-cpp/emitterdef.h
